--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@ https://www.awwwards.com/sites/fay
 #5D5C61 - Smoky(grey)   # Text Color
 #379683 - Gossamer(blue) 
 #7395AE - Bermuda Grey  # Header and Footer Color
-#557A95 - Kashmir Blue  #Button and Darker Color
+#557A95 - Kashmir Blue  #Button and Darker Color #Primary color
 #B1A296 - Cloudy (grey) 
 #F4F7F6 - Mint Cream  # Main Background Color
 */
@@ -21,6 +21,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+main {
+  padding: 1rem;
+}
 header {
   background-color: #7395ae;
   padding: 1rem;
@@ -29,4 +32,24 @@ header a {
   color: #ffffff;
   font-weight: bold;
   text-decoration: none;
+}
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.product {
+  border: 1px #b1a296 solid;
+  margin: 1rem;
+}
+
+.product img {
+  width: 100%;
+  max-width: 400px;
+}
+
+.product-info {
+  padding: 1rem;
 }
